--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,3 +69,15 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+.past-event{
+  background-color: #CCC;
+}
+
+.current-event{
+  background-color: #F14D57;
+}
+
+.future-event{
+  background-color: #74E96F;
+}
