--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,21 +40,26 @@ textarea {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  text-align: right;
+  padding-top: 20px;
 }
 
 .past {
   background-color: #d3d3d3;
   color: white;
+  padding: 0px;
 }
 
 .present {
   background-color: #ff6961;
   color: white;
+  padding: 0px;
 }
 
 .future {
   background-color: #77dd77;
   color: white;
+  padding: 0px;
 }
 
 .saveBtn {
@@ -63,26 +68,14 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
-}
-
-.past-event{
-  background-color: #CCC;
-  border-left: 4px solid #999;
-}
-
-.current-event{
-  background-color: #F14D57;
-  border-left: 4px solid #B43941;
-}
-
-.future-event{
-  background-color: #74E96F;
-  border-left: 4px solid #57AE53;
 }
 
 .past-event-time{
@@ -91,4 +84,12 @@ textarea {
 
 .future-event-time{
   padding-right: 10px;
+}
+
+textarea{
+  border: none;
+}
+
+textarea:focus{
+  border: 2px solid #0A8498;
 }
